Fixed invisible navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,8 +83,7 @@ h1 {
 #NavBar h3 {
   text-align:center;
 }
-
-#navbar-items li{
+.active {
   display:inline;
   padding: 4px 14px;
   border:1px solid black;
